--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^2.10.0"
+    "multer-s3": "^2.10.0",
+    "nodemon": "^3.1.7"
   }
 }
